--- a/index.html
+++ b/index.html
@@ -217,34 +217,54 @@
         </section>
 
         <!-- choose section end  -->
-        <!-- 
 
+<!-- package  section start -->
         <section class="package-section">
-
+            <h1 class="package-title">Deals & Discounts</h1>
+            <p class="cmn-text-style  package-discription">Unlock exclusive deals & discounts! Elevate your travel experience with unbeatable
+                offers. Save more on your journeys, making every adventure unforgettable.</p>
 
             <div class="package-box" id="package-box1">
+
+
                 <div class="price-card">
 
-                    <div></div>
-                    <h1>Tour To Satorini</h1>
-                    <p>Amet consectetur. Vulputate commodo felis
-                        molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant
-                        adipiscing.</p>
-                    <h2></h2>
-                    <button></button>
+                    <div class="card-condition">
+                        <img src="Images/Frame (2).png" alt="">
+                        <p>7 Day / 6 Night</p>
+                        <img src="Images/Frame (1).png" alt="">
+                        <p>Max : 10</p>
+                        <img src="Images/Frame.png" alt="">
+                        <p>Srilanka</p>
+                    </div>
+
+
+                    <h1>Tour To Srilanka</h1>
+                    <p class="cmn-text-style price-card-para">Discover Sri Lanka with our 7-day package! Explore cultural wonders, pristine beaches, and
+                        vibrant markets. Unforgettable experiences await you at an unbeatable price</p>
+                    <h2 class="pricing">Price: $1300-$1500</h2>
+                    <button class="primary-btn price-btn">Book Now</button>
                 </div>
 
             </div>
 
             <div class="package-box" id="package-box2">
                 <div class="price-card">
-                    <div></div>
-                    <h1></h1>
-                    <p>Amet consectetur. Vulputate commodo felis
-                        molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant
-                        adipiscing.</p>
-                    <h2></h2>
-                    <button></button>
+                   <div class="card-condition">
+                        <img src="Images/Frame (2).png" alt="">
+                        <p>7 Day / 6 Night</p>
+                        <img src="Images/Frame (1).png" alt="">
+                        <p>Max : 10</p>
+                        <img src="Images/Frame.png" alt="">
+                        <p>Indonesia</p>
+                    </div>
+
+                    <h1>Tour To Indonesia</h1>
+                    <p class="cmn-text-style price-card-para">Embark on a 7-day Indonesian adventure! Immerse in rich culture, stunning landscapes, and enjoy
+                        extra amenities. Our affordable package ensures an unforgettable experience with added comfort.
+                    </p>
+                    <h2 class="pricing">Price: $1100-$1400</h2>
+                    <button  class="primary-btn price-btn">Book Now</button>
                 </div>
 
             </div>
@@ -253,18 +273,25 @@
             <div class="package-box" id="package-box3">
 
                 <div class="price-card">
-                    <div></div>
-                    <h1>Tour To Satorini</h1>
-                    <p>Amet consectetur. Vulputate commodo felis
-                        molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant
-                        adipiscing.</p>
-                    <h2>Tour To Satorini</h2>
-                    <button></button>
+                <div class="card-condition">
+                        <img src="Images/Frame (2).png" alt="">
+                        <p>7 Day / 6 Night</p>
+                        <img src="Images/Frame (1).png" alt="">
+                        <p>Max : 10</p>
+                        <img src="Images/Frame.png" alt="">
+                        <p>North America</p>
+                    </div>
+
+                    <h1>Tour To North America</h1>
+                    <p class="cmn-text-style price-card-para" >Experience the wonders of North America with our 7-day package! Explore diverse landscapes,
+                        iconic landmarks, and enjoy extra amenities for an enriching and comfortable journey.</p>
+                    <h2 class="pricing">Price: $1500-$1800</h2>
+                    <button class="primary-btn price-btn">Book Now</button>
                 </div>
             </div>
 
-            <button class="primary-btn">See All Packages</button>
-        </section> -->
+            <button class="primary-btn package-btn">See All Packages</button>
+        </section>
 
 
         <!-- package section end  -->
@@ -365,7 +392,7 @@
 
                 </p>
 
-                <button class="primary-btn">See More</button>
+                <button class="primary-btn  demo-btn">See More</button>
             </div>
 
             <div class="demo-video">
